# Homework_webpython_07

./: README.md  config.ini  connector.py  db_models.py  main.py  model.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
migration/: env.py
migration/versions/: 7ac6567530dc_init.py
